fixed lateral overflow

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Roboto+Slab:wght@100..900&display=swap');
 
+
+
 html {
     min-height: 100%;
     display: flex;
@@ -7,10 +9,9 @@ html {
     font-family: Cinzel, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-image: url("./img/siyuan-g_V2rt6iG7A-unsplash.jpg");
     background-position: top;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    background-size: 100%;
+    scrollbar-gutter: stable;
+    overflow-x: hidden;
 }
 
 h1 { 
@@ -21,7 +22,7 @@ h1 {
 .footer{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #464646;
-    min-width: 100%;
+    min-width: 100vw;
     display: flex;
     justify-content: center;    
 }
